--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,15 +31,39 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">SupplierTestone</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">35.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">SupplierTestone</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">38.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="stripe"><td style="text-align:left;padding-right:2em">SupplierTesttwo</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">36.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">SupplierTestthree</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">35.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="total"><td>Total</td>
+<td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">110.4 seconds</td><td colspan="2">&nbsp;</td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">SupplierTestone &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">Search.Search_Prepay_Within_DeadLine</td><td><a href="#m1"><b>SearchPrepay</b>  </a></td><td class="numi">1</td><td>1516109457557</td><td class="numi">34659</td></tr>
+<tr class="passedodd"><td rowspan="1">Search.Search_Prepay_Within_DeadLine</td><td><a href="#m1"><b>SearchPrepayWithinDeadLine</b>  </a></td><td class="numi">1</td><td>1516171270184</td><td class="numi">35661</td></tr>
+<tr><th colspan="4">SupplierTesttwo &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">Search.Search_Credit_Within_DeadLine</td><td><a href="#m2"><b>SearchCreditWithinDeadLine</b>  </a></td><td class="numi">1</td><td>1516171308629</td><td class="numi">36370</td></tr>
+<tr><th colspan="4">SupplierTestthree &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">Search.Search_Credit_Card_Within_DeadLine</td><td><a href="#m3"><b>SearchCreditWithinDeadLine</b>  </a></td><td class="numi">1</td><td>1516171345190</td><td class="numi">35223</td></tr>
 </table>
 <h1>SupplierTestone</h1>
-<h2 id="m1">Search.Search_Prepay_Within_DeadLine:SearchPrepay</h2>
+<h2 id="m1">Search.Search_Prepay_Within_DeadLine:SearchPrepayWithinDeadLine</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>CH</td>
+</tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h1>SupplierTesttwo</h1>
+<h2 id="m2">Search.Search_Credit_Within_DeadLine:SearchCreditWithinDeadLine</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>CH</td>
+</tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h1>SupplierTestthree</h1>
+<h2 id="m3">Search.Search_Credit_Card_Within_DeadLine:SearchCreditWithinDeadLine</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
 <tr class="param stripe"><td>CH</td>
