--- a/test-output/old/SupplierSuite/methods.html
+++ b/test-output/old/SupplierSuite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SupplierSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/01/16 19:00:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Prepay_Within_DeadLine.SearchPrepay(java.lang.String)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">SearchPrepay</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/01/16 19:01:32</td>   <td>34660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/01/16 19:01:32</td>   <td>34663</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/17 12:11:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Prepay_Within_DeadLine.SearchPrepayWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">SearchPrepayWithinDeadLine</td> 
+  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/17 12:11:45</td>   <td>35662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/17 12:11:45</td>   <td>35665</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="69c6ba">  <td>18/01/17 12:11:48</td>   <td>38445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Credit_Within_DeadLine.SearchCreditWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">SearchCreditWithinDeadLine</td> 
+  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="69c6ba">  <td>18/01/17 12:12:25</td>   <td>74816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="69c6ba">  <td>18/01/17 12:12:25</td>   <td>74816</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="9da5bd">  <td>18/01/17 12:12:25</td>   <td>75006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Credit_Card_Within_DeadLine.SearchCreditWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">SearchCreditWithinDeadLine</td> 
+  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="9da5bd">  <td>18/01/17 12:13:00</td>   <td>110229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Card_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="9da5bd">  <td>18/01/17 12:13:00</td>   <td>110230</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Card_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
 </table>
