--- a/test-output/old/SupplierSuite/methods-alphabetical.html
+++ b/test-output/old/SupplierSuite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SupplierSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69c6ba">  <td>18/01/17 12:11:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Credit_Within_DeadLine.SearchCreditWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">SearchCreditWithinDeadLine</td> 
-  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="9da5bd">  <td>18/01/17 12:12:25</td>   <td>36561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Credit_Card_Within_DeadLine.SearchCreditWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">SearchCreditWithinDeadLine</td> 
-  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/01/17 12:11:10</td>   <td>-38445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Prepay_Within_DeadLine.SearchPrepayWithinDeadLine(java.lang.String)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">SearchPrepayWithinDeadLine</td> 
-  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/01/17 12:11:45</td>   <td>-2780</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="69c6ba">  <td>18/01/17 12:12:25</td>   <td>36371</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="9da5bd">  <td>18/01/17 12:13:00</td>   <td>71785</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Card_Within_DeadLine.afterTest()[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/01/17 12:11:45</td>   <td>-2783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Prepay_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Prepay_Within_DeadLine@3d921e20]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="69c6ba">  <td>18/01/17 12:12:25</td>   <td>36371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Credit_Within_DeadLine@46daef40]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
-<tr bgcolor="9da5bd">  <td>18/01/17 12:13:00</td>   <td>71784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Card_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Credit_Card_Within_DeadLine@1e7c7811]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@863125040</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/31 20:01:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Credit_Book.CreditBook(java.lang.String)[pri:0, instance:Booking.Credit_Book@3d921e20]">CreditBook</td> 
+  <td>main@1970881185</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/31 20:03:38</td>   <td>147241</td> <td>&nbsp;</td><td title="&lt;&lt;Credit_Book.afterTest()[pri:0, instance:Booking.Credit_Book@3d921e20]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>18/01/31 20:03:38</td>   <td>147236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Credit_Book.getResult(org.testng.ITestResult)[pri:0, instance:Booking.Credit_Book@3d921e20]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
 </table>
