--- a/test-output/old/SupplierSuite/methods.html
+++ b/test-output/old/SupplierSuite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SupplierSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/02/02 11:17:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Credit_Card_Book.CreditCardBook(java.lang.String)[pri:0, instance:Booking.Credit_Card_Book@3d921e20]">CreditCardBook</td> 
+<tr bgcolor="c78c6b">  <td>18/02/06 19:47:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Amend_Credit.CreditBook(java.lang.String)[pri:0, instance:Amend.Amend_Credit@3d921e20]">CreditBook</td> 
   <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/02 11:18:32</td>   <td>80042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Credit_Card_Book.getResult(org.testng.ITestResult)[pri:0, instance:Booking.Credit_Card_Book@3d921e20]">&lt;&lt;getResult</td> 
+<tr bgcolor="c78c6b">  <td>18/02/06 19:51:17</td>   <td>202173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Amend_Credit.getResult(org.testng.ITestResult)[pri:0, instance:Amend.Amend_Credit@3d921e20]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/02 11:18:32</td>   <td>80048</td> <td>&nbsp;</td><td title="&lt;&lt;Credit_Card_Book.afterTest()[pri:0, instance:Booking.Credit_Card_Book@3d921e20]">&lt;&lt;afterTest</td> 
+<tr bgcolor="c78c6b">  <td>18/02/06 19:51:17</td>   <td>202176</td> <td>&nbsp;</td><td title="&lt;&lt;Amend_Credit.afterTest()[pri:0, instance:Amend.Amend_Credit@3d921e20]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
 </table>
