--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="849fce">  <td>18/01/15 18:23:34</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Credit_Card.afterTest()[pri:0, instance:Search.Search_Credit_Card@36b4cef0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250391581</td>   <td></td> </tr>
+<tr bgcolor="e7dcfd">  <td>18/02/05 13:07:32</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Credit_Book_Within_DeadLine.afterTest()[pri:0, instance:Booking.Credit_Book_Within_DeadLine@3943a2be]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297602875</td>   <td></td> </tr>
 </table>
