--- a/test-output/old/SupplierSuite/classes.html
+++ b/test-output/old/SupplierSuite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Booking.Credit_Card_Book</td>
+<td>Amend.Amend_Credit</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreditCardBook</td>
+<td>CreditBook</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
