--- a/test-output/old/SupplierSuite/methods.html
+++ b/test-output/old/SupplierSuite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SupplierSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/02/07 18:52:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Amend_Credit_NFR.CreditAmendNFR(java.lang.String)[pri:0, instance:Amend.Amend_Credit_NFR@3d921e20]">CreditAmendNFR</td> 
+<tr bgcolor="c78c6b">  <td>18/02/09 14:13:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Cancel_Credit_NFR.CreditCancelNFR(java.lang.String)[pri:0, instance:Cancel.Cancel_Credit_NFR@3d921e20]">CreditCancelNFR</td> 
   <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/07 18:54:36</td>   <td>123789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Amend_Credit_NFR.getResult(org.testng.ITestResult)[pri:0, instance:Amend.Amend_Credit_NFR@3d921e20]">&lt;&lt;getResult</td> 
+<tr bgcolor="c78c6b">  <td>18/02/09 14:15:26</td>   <td>105052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Cancel_Credit_NFR.getResult(org.testng.ITestResult)[pri:0, instance:Cancel.Cancel_Credit_NFR@3d921e20]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/07 18:54:36</td>   <td>123792</td> <td>&nbsp;</td><td title="&lt;&lt;Amend_Credit_NFR.afterTest()[pri:0, instance:Amend.Amend_Credit_NFR@3d921e20]">&lt;&lt;afterTest</td> 
+<tr bgcolor="c78c6b">  <td>18/02/09 14:15:26</td>   <td>105052</td> <td>&nbsp;</td><td title="&lt;&lt;Cancel_Credit_NFR.afterTest()[pri:0, instance:Cancel.Cancel_Credit_NFR@3d921e20]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
 </table>
