Book unitl Deadline

--- a/test-output/old/SupplierSuite/classes.html
+++ b/test-output/old/SupplierSuite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Search.Search_Dotw</td>
+<td>Booking.Credit_Book_Within_DeadLine</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SearchDotw</td>
+<td>CreditBookWithinDeadline</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
